Fixed flickering dot menu bug (#40)
* changed how the width was being calculated for metadata in cards

--- a/packages/app/src/components/SelectionRouter/SelectIModel.scss
+++ b/packages/app/src/components/SelectionRouter/SelectIModel.scss
@@ -2,6 +2,8 @@
  * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
  * See LICENSE.md in the project root for license terms and full copyright notice.
  *--------------------------------------------------------------------------------------------*/
+@import "@itwin/itwinui-css/scss/variables";
+
 .title-section {
   margin: 10px calc(var(--responsive-grid-margin, 64px) - 3px);
 }
@@ -19,6 +21,7 @@
     > .iui-metadata {
       position: absolute;
       bottom: 5px;
+      width: calc(100% - (#{$iui-sm} * 2));
     }
   }
 
